--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-06-05 19:54+0300\n"
+"POT-Creation-Date: 2022-08-09 19:38+0300\n"
 "PO-Revision-Date: 2019-08-14 12:16+0200\n"
 "Last-Translator: Jimmy Ihalainen <jimmy.ihalainen@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -1235,6 +1235,7 @@ msgstr ""
 #: edit_course/templates/edit_course/usertag_delete.html
 #: edit_course/templates/edit_course/usertag_edit.html
 #: edit_course/templates/edit_course/usertagging_add.html
+#: exercise/templates/exercise/_duplicate_submission_modal.html
 #: exercise/templates/exercise/staff/_resubmit_modal.html
 #: exercise/templates/exercise/staff/edit_submitters.html
 #: external_services/templates/external_services/edit_menu.html
@@ -1602,6 +1603,7 @@ msgid "MODEL_NAME_MAX_SUBMISSIONS_RULE_DEVIATION_PLURAL"
 msgstr "enimmäispalautuskertojen poikkeamat"
 
 #: deviations/templates/deviations/_remove_modal.html
+#: exercise/templates/exercise/_duplicate_submission_modal.html
 #: exercise/templates/exercise/staff/_assessment_panel.html
 #: exercise/templates/exercise/staff/_late_submission_approval_modal.html
 #: exercise/templates/exercise/staff/_regrade_submissions.html
@@ -1796,6 +1798,7 @@ msgstr "Ylikirjoita"
 #: deviations/templates/deviations/remove_submissions.html
 #: edit_course/templates/edit_course/batch_assess.html
 #: edit_course/templates/edit_course/edit_gitmanager.html
+#: exercise/templates/exercise/_duplicate_submission_modal.html
 #: exercise/templates/exercise/model/_file_submit_form.html
 #: exercise/templates/exercise/staff/_assessment_panel.html
 msgid "SUBMIT"
@@ -2456,7 +2459,9 @@ msgstr "Luo ja arvostele palautusjoukkoja"
 
 #: edit_course/templates/edit_course/batch_assess.html
 #, python-format
-msgid "BATCH_CREATE_AND_ASSESS_JSON_FORM_INSTRUCTIONS -- %(id)s, %(exercises_api_url)s"
+msgid ""
+"BATCH_CREATE_AND_ASSESS_JSON_FORM_INSTRUCTIONS -- %(id)s, "
+"%(exercises_api_url)s"
 msgstr ""
 "<p><em>Käytä vain jos tiedät, mitä olet tekemässä!</em></p>\n"
 "<p>Lähettämällä tämän voit yrittää luoda ja arvostella useita tehtäviä "
@@ -2465,11 +2470,12 @@ msgstr ""
 "(kokonaisluku)</dt>\n"
 "<dd>Toivotun arvostelijan userprofile id. Sinun userprofile id on <b>%(id)s</"
 "b>.</dd>\n"
-"<dt>Z1 ja Z2 (kokonaislukuja)</dt> <dd>tehtävien ID:t. "
-"Löydät tehtävien ID:t <a href='%(exercises_api_url)s'>kurssitehtävien API:sta</a>. "
-"Vaihtoehtoisesti tarkista tehtävän ID <b>Muokkaa tehtävää</b> -napin verkko-osoitteesta, "
-"joka löytyy osiosta <b>Muokkaa kurssia -> Sisältö</b>. "
-"<b>Muokkaa tehtävää</b> -sivun verkko-osoite sisältää numeron kurssiavainten jälkeen.</dd> </dl>"
+"<dt>Z1 ja Z2 (kokonaislukuja)</dt> <dd>tehtävien ID:t. Löydät tehtävien ID:t "
+"<a href='%(exercises_api_url)s'>kurssitehtävien API:sta</a>. "
+"Vaihtoehtoisesti tarkista tehtävän ID <b>Muokkaa tehtävää</b> -napin verkko-"
+"osoitteesta, joka löytyy osiosta <b>Muokkaa kurssia -> Sisältö</b>. "
+"<b>Muokkaa tehtävää</b> -sivun verkko-osoite sisältää numeron kurssiavainten "
+"jälkeen.</dd> </dl>"
 
 #: edit_course/templates/edit_course/build_log.html
 msgid "BUILD_INITIATED_BY"
@@ -3700,6 +3706,16 @@ msgstr "palautetut tiedostot"
 #: exercise/templates/exercise/_exercisecollection.html
 msgid "TOTAL_POINTS"
 msgstr "Yhteispisteet"
+
+#: exercise/templates/exercise/_duplicate_submission_modal.html
+msgid "DUPLICATE_SUBMISSION_TITLE"
+msgstr "Identtinen palautus"
+
+#: exercise/templates/exercise/_duplicate_submission_modal.html
+msgid "DUPLICATE_SUBMISSION"
+msgstr ""
+"Tämä palautus on identtinen aikaisemman palautuksen <span data-dup-"
+"submission></span> kanssa. Oletko varma, että haluat lähettää palautuksen?"
 
 #: exercise/templates/exercise/_enrollment_success.html
 msgid "COURSE_ENROLLMENT_SUCCESSFUL"
