--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -4433,6 +4433,10 @@ msgid "RESULTS_SHOW_ONLY_STUDENT_WITH_SUBMISSIONS"
 msgstr "Show only students with submissions"
 
 #: exercise/templates/exercise/staff/results.html
+msgid "RESULTS_SHOW_LATEST_SUBMISSION_POINTS"
+msgstr "Ignore last-only grading rule in exercises"
+
+#: exercise/templates/exercise/staff/results.html
 msgid "SUMMARIES"
 msgstr "Summaries"
 
